# stplr

./: Cargo.toml  LICENSE  README.md
.github/workflows/: ci.yml  notify.yml
clients/: README.md
clients/go/: README.md  go.mod  stplr.go  stplr_test.go
clients/go/cmd/stplrctl/: main.go
clients/java/: README.md
clients/java/src/org/stplr/: Json.java  StplrClient.java
clients/java/test/org/stplr/: StplrClientTest.java
clients/python/: README.md  pyproject.toml  test_stplr.py
clients/python/stplr/: __init__.py
demo/: demo.sh
deploy/: Containerfile
docs/: PROTOCOL.md
src/: changefeed.rs  client.rs  cluster.rs  compress.rs  config.rs  coord.rs  encrypt.rs  evict.rs  georep.rs  guard.rs  ingest.rs  journal.rs  lease.rs  lib.rs  lmdb.rs  metrics.rs  net.rs  partitioner.rs  pitr.rs  proto.rs  rbac.rs  reshard.rs  resp.rs  secindex.rs  shard.rs  smart.rs  store.rs  tls.rs  txn.rs
