[package]
name = "stplr"
version = "0.1.0"
edition = "2021"
description = "stplr — a self-managing, horizontally-scaling distributed key/value + set-ops store"
license = "BUSL-1.1"

[dependencies]
serde = { version = "1", features = ["derive"] }
serde_json = "1"
heed = "0.20"
toml = "0.8"
tokio = { version = "1", features = ["rt-multi-thread", "macros", "signal", "sync", "net", "time", "io-util"] }
axum = "0.7"
reqwest = { version = "0.12", default-features = false, features = ["json"] }
async-trait = "0.1"
anyhow = "1"
