[build-system]
requires = ["setuptools>=61"]
build-backend = "setuptools.build_meta"

[project]
name = "stplr"
version = "0.1.0"
description = "Python client for stplr — a self-managing distributed key/value + set-ops store"
readme = "README.md"
requires-python = ">=3.9"
license = { text = "BSL-1.1" }
authors = [{ name = "The Von Drakk Corporation" }]
urls = { Homepage = "https://stplr.org", Source = "https://github.com/vondrakk/stplr" }

[tool.setuptools]
packages = ["stplr"]
